--- a/index.html
+++ b/index.html
@@ -35,10 +35,21 @@ A less stringent clustering is also run to provide a classification into homolog
 
 <h3>
 <a id="java-dependencies" class="anchor" href="#java-dependencies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Java dependencies</h3>
+Biojava
+Apache.common.Math
+Colt
 
 <h3>
 <a id="third-party-required-software" class="anchor" href="#third-party-required-software" aria-hidden="true"><span class="octicon octicon-link"></span></a>Third-party required software</h3>
-
+SignalP (ref)
+Blast (Altschul et al.,)
+MCL algorithm (van Dongen, 2002)
+Muscle  (Eddy et al.,)
+HH-suite
+RevTrans
+PhyML (Guindon et al.,2010)
+codeml (PAML) (Zhang et al., )
+Meme (Bailey et al., )
 <h3>
 <a id="citation" class="anchor" href="#citation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Citation</h3>
 
