--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <p>EffectorPredictor is a pipeline for virulence - related gene prediction from one or multiple genomes.</p>
         <p class="view"><a href="https://github.com/matteobrilli/EffectorPredictor">View the Project on GitHub <small>matteobrilli/EffectorPredictor</small></a></p>
         <ul>
-          <li><a href="https://github.com/matteobrilli/EffectorPredictor/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/matteobrilli/EffectorPredictor/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/effectorPredictor.jar">Download <strong>JAR File</strong></a></li>
+          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/EffectorPredictor_manualnew.pdf">Download <strong> Manual (pdf) </strong></a></li>
           <li><a href="https://github.com/matteobrilli/EffectorPredictor">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
