--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p class="view"><a href="https://github.com/matteobrilli/EffectorPredictor">View the Project on GitHub <small>matteobrilli/EffectorPredictor</small></a></p>
         <ul>
           <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/effectorPredictor.jar">Download <strong>JAR File</strong></a></li>
-          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/EffectorPredictor_manualnew.pdf">Download <strong> Manual (pdf) </strong></a></li>
+          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/EffectorPredictor_manualnew.pdf">Download <strong> Manual</strong></a></li>
           <li><a href="https://github.com/matteobrilli/EffectorPredictor">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
@@ -35,21 +35,21 @@ A less stringent clustering is also run to provide a classification into homolog
 
 <h3>
 <a id="java-dependencies" class="anchor" href="#java-dependencies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Java dependencies</h3>
-Biojava
-Apache.common.Math
-Colt
+#Biojava
+#Apache.common.Math
+#Colt
 
 <h3>
 <a id="third-party-required-software" class="anchor" href="#third-party-required-software" aria-hidden="true"><span class="octicon octicon-link"></span></a>Third-party required software</h3>
-SignalP (ref)
-Blast (Altschul et al.,)
-MCL algorithm (van Dongen, 2002)
-Muscle  (Eddy et al.,)
-HH-suite
-RevTrans
-PhyML (Guindon et al.,2010)
-codeml (PAML) (Zhang et al., )
-Meme (Bailey et al., )
+#SignalP (ref)
+#Blast (Altschul et al.,)
+#MCL algorithm (van Dongen, 2002)
+#Muscle  (Eddy et al.,)
+#HH-suite
+#RevTrans
+#PhyML (Guindon et al.,2010)
+#codeml (PAML) (Zhang et al., )
+#Meme (Bailey et al., )
 <h3>
 <a id="citation" class="anchor" href="#citation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Citation</h3>
 
