--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body>
     <div class="wrapper">
       <header>
+      <a href="URL"><img src="https://cloud.githubusercontent.com/assets/10756420/5956989/1a951b20-a7b4-11e4-9c48-8b812c78702b.png" alt="alt text" style="border:none;" /></a>
         <h1>EffectorPredictor </h1>
         <p>EffectorPredictor is a pipeline for virulence - related gene prediction from one or multiple genomes.</p>
         <p class="view"><a href="https://github.com/matteobrilli/EffectorPredictor">View the Project on GitHub <small>matteobrilli/EffectorPredictor</small></a></p>
