--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header>
-      <a href="URL"><img src="https://cloud.githubusercontent.com/assets/10756420/5958421/8b4a50f0-a7c4-11e4-8436-7e78e8ac7536.png" alt="alt text" style="border:none;" height="50%" width="50%" /></a>
+      <a href="URL"><img src="https://cloud.githubusercontent.com/assets/10756420/5958421/8b4a50f0-a7c4-11e4-8436-7e78e8ac7536.png" height="50%" width="50%" /></a>
         <h1>EffectorPredictor </h1>
         <p>EffectorPredictor is a pipeline for virulence - related gene prediction from one or multiple genomes.</p>
         <p class="view"><a href="https://github.com/matteobrilli/EffectorPredictor">View the Project on GitHub <small>matteobrilli/EffectorPredictor</small></a></p>
