--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <div class="wrapper">
+              <center></center><a href="URL"><img src="https://cloud.githubusercontent.com/assets/10756420/5958421/8b4a50f0-a7c4-11e4-8436-7e78e8ac7536.png" height="20%" width="20%" /></a></center>
       <header>
         <h1>EffectorPredictor </h1>
         <p>EffectorPredictor is a pipeline for virulence - related gene prediction from one or multiple genomes.</p>
@@ -24,7 +25,6 @@
           <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/effectorPredictor.jar">Download <strong>JAR File</strong></a></li>
           <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/EffectorPredictor_manualnew.pdf">Download <strong> Manual</strong></a></li>
           <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases">View On <strong>GitHub</strong></a></li>
-          <a href="URL"><img src="https://cloud.githubusercontent.com/assets/10756420/5958421/8b4a50f0-a7c4-11e4-8436-7e78e8ac7536.png" height="20%" width="20%" /></a>
         </ul>
       </header>
       <section>
