--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases">View On <strong>GitHub</strong></a></li>
         </ul>
         </header>
-        <header>
+        <section>
                       <p align="center"><a href="URL"><img src="https://cloud.githubusercontent.com/assets/10756420/5958597/8698f91a-a7c6-11e4-9602-0ed130a88d9e.gif" height="30%" width="30%" /></a></p>
-            </header>
+            </section>
 
       <section>
         <h3>
