--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </ul>
         </header>
         <section>
-                      <p align="center"><a href="URL"><img src="https://cloud.githubusercontent.com/assets/10756420/5958597/8698f91a-a7c6-11e4-9602-0ed130a88d9e.gif" height="30%" width="30%" /></a></p>
+                      <p align="center"><a href="URL"><img src="https://cloud.githubusercontent.com/assets/10756420/5959452/baa96584-a7ce-11e4-8163-e9376d9cdf10.png" height="30%" width="30%" /></a></p>
             </section>
 
       <section>
