--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <ul>
           <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/effectorPredictor.jar">Download <strong>JAR File</strong></a></li>
           <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/EffectorPredictor_manualnew.pdf">Download <strong> Manual</strong></a></li>
+          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases">Download example dataset Chlamydophila</a></li>
+          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases">Download example Erwinia</a></li>
           <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases">View On <strong>GitHub</strong></a></li>
         </ul>
         </header>
@@ -71,6 +73,15 @@ A less stringent clustering is also run to provide a classification into homolog
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p><a href="mailto:matteo.brilli@fmach.it">matteo.brilli@fmach.it</a></p>
+
+
+
+
+
+
+
+
+
       </section>
     </div>
     <footer>
