--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases">View On <strong>GitHub</strong></a></li>
         </ul>
         
-                              <p align="center"><a href="URL"><img src="https://cloud.githubusercontent.com/assets/10756420/5960196/081b0aca-a7d4-11e4-87bd-06bdb9b38e6c.png" height="30%" width="30%" /></a></p>
+                              <p align="left"><a href="URL"><img src="https://cloud.githubusercontent.com/assets/10756420/5960196/081b0aca-a7d4-11e4-87bd-06bdb9b38e6c.png" height="40%" width="40%" /></a></p>
 
         <p class="view"><a href="https://github.com/matteobrilli/EffectorPredictor">View the Project on GitHub <small>matteobrilli/EffectorPredictor</small></a></p>
         
