--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
           <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/effectorPredictor.jar">Download <strong>JAR File</strong></a></li>
           <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/EffectorPredictor_manualnew.pdf">Download <strong> Manual</strong></a></li>
-          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases">Chlamydophila</strong> Example</a></li>
+          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases"><strong></string>Chlamydophila</strong> Example</a></li>
           <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases"><strong>Erwinia</strong> Example</a></li>
           <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases">View On <strong>GitHub</strong></a></li>
         </ul>
