--- a/index.html
+++ b/index.html
@@ -94,4 +94,12 @@ A less stringent clustering is also run to provide a classification into homolog
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
+  <!-- hitwebcounter Code START -->
+<a href="http://www.hitwebcounter.com/links.php" target="_blank">
+<img src="http://hitwebcounter.com/counter/counter.php?page=5967349&style=0006&nbdigits=5&type=page&initCount=0" title="http://www.hitwebcounter.com/" Alt="http://www.hitwebcounter.com/"   border="0" >
+</a><br/>
+<!-- hitwebcounter.com --><a href="http://www.hitwebcounter.com/" title="Free Hit Counter Code" 
+target="_blank" style="font-family: Geneva, Arial, Helvetica; 
+font-size: 8px; color: #9F9F97; text-decoration: underline ;"><code>Free Hit Counter Code</code>
+</a>   
 </html>
