--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         
         <ul2>
           
-          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases"><strong></string>Chlamydia</strong> Example</a></li>
-          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases"><strong>Erwinia</strong> Example</a></li>
+          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases"><strong></string>Chlamydophila pneuomoniae</strong> Example</a></li>
+          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases"><strong>Erwinia pyrifolia</strong> Example</a></li>
         </ul2>
         </header>
         <section>
