--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         
         <ul2>
           
-          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases"><strong></string>Chlamydophila pneuomoniae</strong> Example</a></li>
+          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases"><strong>Chlamydophila pneuomoniae</strong> Example</a></li>
           <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases"><strong>Erwinia pyrifolia</strong> Example</a></li>
         </ul2>
         </header>
