--- a/index.html
+++ b/index.html
@@ -87,7 +87,13 @@ A less stringent clustering is also run toprovide a classification into homologo
 
 
 
-
+<form action="http://www.wordle.net/advanced" method="POST">
+    <textarea name="text" style="display:none">
+        How much wood would a woodchuck chuck if
+        a woodchuck could chuck wood?
+    </textarea>
+    <input type="submit">
+</form>
 
       </section>
     </div>
