--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         
         
         <ul2>
-        <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases"><strong>Erwinia pyrifoliae</strong> Example</a></li>
-        <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases"><strong>Chlamydia pneuomoniae</strong> Example</a></li>
+        <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases"><strong>E. pyrifoliae</strong> Example</a></li>
+        <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases"><strong>C. pneumoniae</strong> Example</a></li>
         </ul2>
         </header>
         <section>
