--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="wrapper">
       <header>
         <ul>
-          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/effectorPredictor.jar">Download <strong>JAR File</strong></a></li>
-          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/EffectorPredictor_manualnew.pdf">Download <strong> Manual</strong></a></li>
+          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/"> <strong> Download JAR File</strong></a></li>
+          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/EffectorPredictor_manualnew.pdf"> <strong>Download Manual</strong></a></li>
         </ul>
       
                               <p align="left"><a href="URL"><img src="https://cloud.githubusercontent.com/assets/10756420/5964009/1cdee446-a7f1-11e4-8333-512c51cd0ee6.png" height="60%" width="60%" /></a></p>
