--- a/index.html
+++ b/index.html
@@ -43,18 +43,16 @@ A less stringent clustering is also run toprovide a classification into homologo
 
 <h3>
 <a id="java-dependencies" class="anchor" href="#java-dependencies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Java dependencies</h3>
-<h4>
-<a id="java-dependencies" class="anchor" href="#java-dependencies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Biojava</h4>
-
-<h4>
-<a id="java-dependencies" class="anchor" href="#java-dependencies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Apache.common.Math</h4>
-<h4>
-<a id="java-dependencies" class="anchor" href="#java-dependencies" aria-hidden="true"><span class="octicon octicon-link"></span></a>Colt</h4>
-
+<ul>
+<li>biojava3-core-3.0.7.jar:<a href="http://biojava.org/wiki/BioJava:Download_3.0.5"> Download Biojava3</a></li>
+<li> commons-math3-3.3.jar: <a href="http://commons.apache.org/proper/commons-math/download_math.cgi"> Download Math3</a></li>
+<li> jung-api-2.0.1.jar: <a href="http://sourceforge.net/projects/jung/files/">Download Jung-api</a></li>
+<li> Colt: this library is no more maintained, can be found for download here <a href="https://code.google.com/p/d-p2p-sim/downloads/detail?name=colt.jar&can=2&q=">Download colt.jar</a></li>
+</ul>
 <h3>
 <a id="third-party-required-software" class="anchor" href="#third-party-required-software" aria-hidden="true"><span class="octicon octicon-link"></span></a>Third-party required software</h3>
 <ul>
-Several programs are launched by EffectorPredictor (EP) and therefore they need to be installed on your machine; their path must be added to the EP configuration file, see below.
+Several programs are launched by EffectorPredictor (EP) and therefore they need to be installed on your machine; their path must be added to the EP configuration file, see the manual.
 
 <li> Blast <a href="http://blast.ncbi.nlm.nih.gov/Blast.cgi?PAGE_TYPE=BlastDocs&DOC_TYPE=Download">Go</a></li>
 <li> MCL <a href="http://www.micans.org/mcl/index.html?sec_software"> Go </a></li>
