--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div class="wrapper">
       <header>
         <ul>
-          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/"> <strong> Download JAR File</strong></a></li>
-          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/EffectorPredictor_manualnew.pdf"> <strong>Download Manual</strong></a></li>
-          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases"><strong>E. pyrifoliae</strong> Example</a></li>
+          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/"> <strong> Download EP </strong></a></li>
+          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/EffectorPredictor_manualnew.pdf"> <strong> Download Manual </strong></a></li>
+          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases"><strong>E. pyrifoliae</strong> Example </a></li>
        </ul>
       
                               <p align="left"><a href="URL"><img src="https://cloud.githubusercontent.com/assets/10756420/6043613/aa3f9592-ac8d-11e4-81d5-7ef2f1777510.png" height="60%" width="60%" /></a></p>
