--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="wrapper">
       <header>
         <ul>
-          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/"> <strong> Download EP </strong></a></li>
-          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/EffectorPredictor_manualnew.pdf"> <strong> Download Manual </strong></a></li>
+          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/"> Download <strong> EffectorPredictor </strong></a></li>
+          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/EffectorPredictor_manualnew.pdf"> Download the <strong>  Manual </strong></a></li>
           <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases">Download <strong> C. pneumoniae </strong> Example </a></li>
        </ul>
       
