--- a/index.html
+++ b/index.html
@@ -72,7 +72,24 @@ Several programs are launched by EffectorPredictor (EP) and therefore they need 
 
 <p><a href="mailto:matteo.brilli@fmach.it">matteo.brilli@fmach.it</a></p>
 
-
+<!-- hitwebcounter Code START -->
+<a href="http://www.hitwebcounter.com/countersiteservices.php" target="_blank">
+<img src="http://hitwebcounter.com/counter/counter.php?page=5973243&style=0035&nbdigits=5&type=page&initCount=0" title="Efficient stats" Alt="Efficient stats"   border="0" >
+</a><br/>
+<!-- hitwebcounter.com --><a href="http://www.hitwebcounter.com/" title="site meter statistics" 
+target="_blank" style="font-family: Geneva, Arial, Helvetica, sans-serif; 
+font-size: 11px; color: #97878C; text-decoration: underline ;"><code>site meter statistics</code>
+</a>   
+  
+  
+  <!-- hitwebcounter Code START -->
+<a href="http://www.hitwebcounter.com/countersiteservices.php" target="_blank">
+<img src="http://hitwebcounter.com/counter/counter.php?page=5973244&style=0035&nbdigits=5&type=ip&initCount=0" title="Efficient stats" Alt="Efficient stats"   border="0" >
+</a><br/>
+<!-- hitwebcounter.com --><a href="http://www.hitwebcounter.com/" title="site meter statistics" 
+target="_blank" style="font-family: Geneva, Arial, Helvetica, sans-serif; 
+font-size: 11px; color: #97878C; text-decoration: underline ;"><code>site meter statistics</code>
+</a>   
 
 
 
