--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div class="wrapper">
       <header>
         <ul>
-          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/"> Download <strong> EffectorPredictor </strong></a></li>
-          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/beta/EffectorPredictor_manualnew.pdf"> Download the <strong>  Manual </strong></a></li>
-          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases">Download <strong> C. pneumoniae </strong> Example </a></li>
+          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/v1.0/EP_v1.0.zip"> Download <strong> EffectorPredictor </strong></a></li>
+          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/v1.0/EffectorPredictor_manual_v1.0.pdf"> Download the <strong>  Manual </strong></a></li>
+          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/v1.0/datasetChlamydophila.zip">Download <strong> C. pneumoniae </strong> Example </a></li>
        </ul>
       
                               <p align="left"><a href="URL"><img src="https://cloud.githubusercontent.com/assets/10756420/6043613/aa3f9592-ac8d-11e4-81d5-7ef2f1777510.png" height="60%" width="60%" /></a></p>
