--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
       <header>
         <ul>
           <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/v1.0/EP_v1.0.zip"> Download <strong> EffectorPredictor </strong></a></li>
-          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/v1.0/EffectorPredictor_manual_v1.0.pdf.zip"> Download the <strong>  Manual </strong></a></li>
+          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/v1.0/EffectorPredictor_manual_v1.0.pdf"> Download EP <strong>  Manual </strong></a></li>
           <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/v1.0/datasetChlamydophila.zip">Download <strong> C. pneumoniae </strong> Example </a></li>
+          <li><a href="https://github.com/matteobrilli/EffectorPredictor/releases/download/v1.0/datasetSMALL.zip">Download <strong> SMALL </strong> Example </a></li>
        </ul>
       
                               <p align="left"><a href="URL"><img src="https://cloud.githubusercontent.com/assets/10756420/7987390/75360094-0add-11e5-961b-917c4734dd85.png" height="60%" width="60%" /></a></p>
@@ -66,17 +67,20 @@ Several programs are launched by EffectorPredictor (EP) and therefore they need 
 <li> PhyML <a href="http://www.atgc-montpellier.fr/phyml/binaries.php"> Go </a></li>
 <li> codeml (PAML)<a href="http://abacus.gene.ucl.ac.uk/software/paml.html"> Go </a></li>
 <li> Meme <a href="http://meme.nbcr.net/meme/downloads.html"> Go </a></li>
+<li> Gblocks <a href="http://molevol.cmima.csic.es/castresana/Gblocks.html">Go</a></li>
+
 </ul>
 <h3>
 <a id="citation" class="anchor" href="#citation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Citation</h3>
-
+Brilli et al., Submitted to Bioinformatics. EffectorPredictor: a pipeline to highlight effector genes.
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p><a href="mailto:matteo.brilli@fmach.it">matteo.brilli@fmach.it</a></p>
 
-
+<!--FEM logo-->
 <p align="center"><a href="URL"><img src="https://cloud.githubusercontent.com/assets/10756420/8003456/e6cb1a60-0b77-11e5-9acf-7029bf9180fb.png" height="40%" width="40%" /></a></p>
+<!--UNIFI logo-->
 <p align="center"><a href="URL"><img src="https://cloud.githubusercontent.com/assets/10756420/8003459/e9e869be-0b77-11e5-8e58-d0f1cd2989a0.png" height="40%" width="40%" /></a></p>
 
 
